--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         arch:
           - [aarch64-linux-gnn, aarch64, /opt/externs/libs]
           - [arm-linux-gnueabihf, armv4, /opt/externs/libs]
-          - [arm-linux-gnueabi, /opt/externs/libs]
+          - [arm-linux-gnueabi, armv7, /opt/externs/libs]
           - [x86_64-linux-gnu, x86_64, /usr/local]
 
     steps:
